# python_tutorials

./: .pre-commit-config.yaml  pyproject.toml
tutorials/pydantic_demo/: main.py
tutorials/restapi_demo/: consuming_api.py
